# memory-pool

./: CMakeLists.txt  LICENSE
cmake/: ubsan.cmake
include/: memory_pool.h
include/memory-pool/: memory_pool.h
src/: internal_linux.cpp  internal_windows.cpp  memory_pool.cpp
src/include/: internal.h
test/: CMakeLists.txt
test/include/: TestUtils.h
test/src/: CustomAllocator.cpp  TestAlignment.cpp  TestSingleThread.cpp  TestThreadSafe.cpp  TestUtils.cpp
